<resources>
    <string name="app_name">AlarmClock</string>
    <string name="alarm">Alarm</string>
    <string name="clear">Clear</string>

    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <string name="number_picker_formatter">%02d</string>
    <string name="save">Save</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="cancel">Cancel</string>
</resources>