<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AddAlarm">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/_1sdp"
        android:background="@color/black">

        <TextView
            android:id="@+id/addAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/add_alarm"
            android:padding="@dimen/_7sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/cancelAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:padding="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/editColor"
            />

        <TextView
            android:id="@+id/saveAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/save"
            android:padding="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/editColor"
            android:layout_alignParentEnd="true"
            />




        <View
            android:id="@+id/SplitLine_hor3"
            android:layout_width="match_parent"
            android:layout_height= "1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_transparent" />


    </RelativeLayout>


    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/hoursPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionBar"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_105sdp"
        app:np_formatter="@string/number_picker_formatter"
        app:np_max="12"
        app:np_min="1"
        app:np_selectedTextColor="@color/white"
        app:np_selectedTextSize="@dimen/_18ssp"
        app:np_textColor="@color/pickerUnselectedColor"
        app:np_textSize="@dimen/_16ssp"
        app:np_typeface="@string/roboto_light"
        app:np_value="24"
         />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/minutesPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionBar"
        android:layout_alignParentEnd="@+id/hoursPicker"
        android:layout_marginStart="@dimen/_153sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:np_formatter="@string/number_picker_formatter"
        app:np_max="59"
        app:np_min="0"
        app:np_selectedTextColor="@color/white"
        app:np_selectedTextSize="@dimen/_18ssp"
        app:np_textColor="@color/pickerUnselectedColor"
        app:np_textSize="@dimen/_16ssp"
        app:np_typeface="@string/roboto_light"
        app:np_value="59" />


    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/amPmPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionBar"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_toEndOf="@+id/minutesPicker"
        app:np_selectedTextColor="@color/white"
        app:np_selectedTextSize="@dimen/_18ssp"
        app:np_textColor="@color/pickerUnselectedColor"
        app:np_textSize="@dimen/_16ssp"
        app:np_typeface="@string/roboto_light"
        />



    <View
        android:id="@+id/horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_height= "1dp"
        android:layout_below="@id/minutesPicker"
        android:background="@color/light_transparent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_below="@+id/horizontal"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/black2"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_20sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/repeatItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="Repeat"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_10ssp"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/pickerUnselectedColor"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="Never"/>

            </RelativeLayout>

            <View
                android:id="@+id/repearHorizontal"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_height= "1dp"
                android:layout_below="@id/repeatItem"
                android:background="@color/light_transparent" />

            <RelativeLayout
                android:id="@+id/lableItem"
                android:layout_below="@id/repearHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="Label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_10ssp"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/pickerUnselectedColor"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="Alarm"/>

            </RelativeLayout>

            <View
                android:id="@+id/labelHorizontal"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_height= "1dp"
                android:layout_below="@id/lableItem"
                android:background="@color/light_transparent" />

            <RelativeLayout
                android:id="@+id/soundItem"
                android:layout_below="@id/labelHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="Sound"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_10ssp"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/pickerUnselectedColor"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="Radar Music"/>

            </RelativeLayout>



        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/horizontal2"
        android:layout_width="match_parent"
        android:layout_height= "1dp"
        android:layout_below="@id/cardView"
        android:background="@color/light_transparent" />

</RelativeLayout>